--- a/CSharpExamples/CSharp/CSharp7.0.csproj
+++ b/CSharpExamples/CSharp/CSharp7.0.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
