--- a/CSharpExamples/CSharp6.0Samples/CSharp6.0Samples.csproj
+++ b/CSharpExamples/CSharp6.0Samples/CSharp6.0Samples.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net45</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
     <RootNamespace>CSharp6._0Samples</RootNamespace>
-        <StartupObject>CSharp6._0Samples.AutoPropertyInitialization</StartupObject>
+        <!--<StartupObject>CSharp6._0Samples.AutoPropertyInitialization</StartupObject>-->
 <!--        <StartupObject>CSharp6._0Samples.NullConditionalOperatorDemo</StartupObject>-->
 <!--        <StartupObject>CSharp6._0Samples.StringInterpolationDemo</StartupObject>-->
 <!--        <StartupObject>CSharp6._0Samples.ExceptionFiltersDemo</StartupObject>-->
-<!--        <StartupObject>CSharp6._0Samples.NameOfDemo</StartupObject>-->
+        <StartupObject>CSharp6._0Samples.NameOfDemo</StartupObject>
 <!--        <StartupObject>CSharp6._0Samples.AwaitInCatchFinallyBlocksDemo</StartupObject>-->
         
   </PropertyGroup>
@@ -18,4 +18,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <LangVersion>6</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+  </ItemGroup>
 </Project>
