--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /.vs/CSharp/v17/.wsuo
 /CSharpExamples/.vs/CSharpExamples/FileContentIndex
 /obj
+/CSharpExamples/.vs/CSharpExamples
+/CSharpExamples/CSharp6.0Samples/obj/*
+/CSharpExamples/CSharp8.0/obj/*
+/CSharpExamples/CSharp9.0/obj/*
